# osu-cli

./: .gitignore  README.md  cli.py  install.sh  osu-cli.py  pyproject.toml
osucli/: ascii_arts.py  config.py  download_map.py  fetch.py  main.py  pp_calc.py  rec.py  rs.py
